--- a/jane-street-competition/main.ipynb
+++ b/jane-street-competition/main.ipynb
@@ -454,6 +454,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lrs = "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
