jane street updates

--- a/jane-street-competition/main.ipynb
+++ b/jane-street-competition/main.ipynb
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -467,6 +467,8 @@
    ],
    "source": [
     "for i in range(10000):\n",
+    "\n",
+    "    # forward pass\n",
     "    ix = torch.randint(0, input.shape[0], (64,))\n",
     "\n",
     "    h1 = torch.tanh(input[ix] @ W1 + b1)\n",
@@ -474,6 +476,7 @@
     "    h3 = torch.tanh(h2 @ W3 + b3)\n",
     "    output = h3 @ W4 + b4\n",
     "\n",
+    "    # R^2 loss calculation\n",
     "    weights = torch.tensor(y_train['weight'].values)[ix]\n",
     "    y_true = torch.tensor(y_train['responder_6'].values)[ix]\n",
     "    output = output.squeeze()\n",
@@ -481,6 +484,7 @@
     "    denominator = torch.sum(weights * y_true ** 2)\n",
     "    r2_loss = (numerator / denominator)\n",
     "\n",
+    "    # backward pass\n",
     "    for p in parameters:\n",
     "        p.grad = None\n",
     "    r2_loss.backward()\n",
